# OSLabs

./: .gitignore  LICENSE  README.md
lab1/: CMakeLists.txt
lab1/Creator/: Creator.cpp
lab1/Dependencies/include/utils/: employee.h  input_parsing.h
lab1/Main/: Main.cpp
lab1/Reporter/: Reporter.cpp
lab1/Tests/: Test.cpp
lab2/: CMakeLists.txt  INSTRUCTIONS.txt
lab2/Dependencies/include/utils/: ArrayData.h  array_algorithms.h  array_data.h
lab2/Main/: Main.cpp
lab2/Tests/: Test.cpp  Tests.cpp
lab3/: CMakeLists.txt  INSTRUCTIONS.txt
lab3/Dependencies/include/utils/: array_data.h  event_boost.cpp  event_boost.h  input_parsing.h  marker_parameter_data.h  marker_procedures.cpp  marker_procedures.h  thread_manager.cpp  thread_manager.h  thread_manager_boost.cpp  thread_manager_boost.h
lab3/Dependencies/src/: event_boost.cpp  input_parsing.cpp  marker_procedures.cpp  thread_manager.cpp  thread_manager_boost.cpp
lab3/Main/: Main.cpp
lab3/Tests/: Tests.cpp
lab4/: CMakeLists.txt  INSTRUCTIONS.txt
lab4/Dependencies/include/utils/: input_parsing.h  message_queue.h  message_queue_boost.h
lab4/Dependencies/src/: input_parsing.cpp  message_queue.cpp  message_queue_boost.cpp
lab4/Receiver/: Receiver.cpp
lab4/Sender/: Sender.cpp
lab4/Tests/: Tests.cpp
lab5/: CMakeLists.txt
lab5/Client/: Client_proc.cpp
lab5/Dependencies/include/base/: client.h  client_boost.h  message.h  server.h  server_boost.h
lab5/Dependencies/include/utils/: bplus_tree.h  employee.h  employee_database.h  employee_database_internal.h  input_parsing.h
lab5/Dependencies/src/: client.cpp  client_boost.cpp  employee_database.cpp  employee_database_internal.cpp  input_parsing.cpp  server.cpp  server_boost.cpp
lab5/Server/: Server.cpp  Server_proc.cpp
lab5/Tests/: Tests.cpp
